# cTensor

./: .gitignore  .project  CMakeLists.txt  Makefile  README.md  TODO  main  maker  maker.sh  output
app/: CMakeLists.txt  main.cpp  matrix_demo.c  runTheDamnNetwork.cpp
app/examples/: main.cpp  matrix_example.cpp  network_example.cpp
app/examples/linalg/: matrix_example.cpp  mnist_example.cpp  network_example.cpp  npz_example.cpp
builds/: CMakeCache.txt  Makefile  cmake_install.cmake  run  runTheDamnNetwork
builds/Networks/: Makefile  cmake_install.cmake
cTensor/: CMakeLists.txt
cTensor/include/: Common.h  MNistLoader.h  Matlib.h  Matrix.h  NPZReader.h  Network.h
cTensor/src/: MNistLoader.cpp  Matlib.cpp  Matrix.cpp  NPZReader.cpp  Network.cpp
include/: .constants.hpp.swp  .tensor.h.swp  CNN.hpp  Matrix.hpp  Network.hpp  UI.hpp  common.hpp  constants.hpp  matLib.hpp  matrix.h  network.h  networkTrain.hpp  tensor.h  training.hpp  userInterFace.hpp
include/basic_math/: add.h
include/linearalg/: MatrixInterface.hpp  matLib.hpp
include/network/: Network.hpp  networkTrain.hpp
include/ui/: userInterFace.hpp
old/include/: README.md  main.cpp  tensor.h
old/src/: CMakeLists.txt  README.md
old/src/NeuralNetwork/: .network.cpp.swp  CMakeLists.txt
old/src/OpenCV/: main.cpp
old/src/linearAlg/GPU/: run
old/src/linearAlg/noGPU/: .tensor.cpp.swp  libTensor.cpp  tensor.cpp
outputs/: mainOut  mainoutputs  outputmain2  outputs11.txt
python/: .backprop_Rn_Rm.py.swp  backprop_R1_R1.py  backprop_Rn_Rm.py
src/: .main.cpp.swp  CMakeLists.txt  CNN.cpp  Driver.cpp  MatLib.cpp  Matrix.cpp  Matrix.hpp  Network.cpp  Network.hpp  README.md  UI.cpp  a.out  description.md  kernel.cpp  main.cpp  main2.cpp  main3.cpp  maker  matrix.c  outputs.txt  outputs10.txt  run  runTheDamnNetwork.cpp  src  training.cpp
src/DEBUG/: README.md  main.cpp  main3.cpp
src/Data/: dataHandler.cpp
src/GPU/: README.md  a.out  main.cu
src/Matrix/: .kernel.cpp.swp  CMakeLists.txt  kernel.cpp  operations.cpp
src/Networks/: .Network.cpp.swp  Network.cpp  Networkcop.cpp
src/NeuralNetwork/: network.cpp
src/UI/: .driver.cpp.swp  a.out  driver.cpp  main.cpp
src/basic_math/: add.c
src/highBuild/pythonCode/: KMC.py
src/impl/: main.cpp  runTheDamnNetwork.cpp
src/include/: Network.hpp  constants.hpp  matLib.hpp  networkTrain.hpp  userInterFace.hpp
src/linearAlg/GPU/: README.md  main.cpp
src/linearAlg/noGPU/: CMakeLists.txt  a.out  main.cpp  tensor.h
src/lowBuild/noGPU/: .network.cpp.swp  CMakeLists.txt  gradDesc.cpp  main.cpp  network.cpp  run  tensor.cpp
src/lowBuild/noGPU/head/: gradDesc.hpp  network.h  network.hpp  tensor.hpp
src/noGPU/src/: CMakeLists.txt  libTensor.cpp  main.cpp  network.cpp  tensor.cpp
src/outputs/: outputs2.txt  outputs3.txt  outputs4.txt  outputs5.txt  outputs6.txt  outputs7.txt  outputs8.txt  outputs9.txt
src/scratch/: CMakeLists.txt  DisplayImage  DisplayImage.cpp  MatLib.cpp  Matrix.hpp  Matrix2.hpp  driver.cpp
src/scratch/DEBUG/: README.md  a.out  main.cpp  main2.cpp  main3.cpp  main4.cpp  test.cpp
src/scratch/test/: main.cpp  main.hpp  sparseKernel.cpp
srcDouble/: CMakeLists.txt  TODO  a.out  aojdnfakf  main.cpp  run  test.cpp
srcDouble/Data/: dataHandler.cpp
srcDouble/Matrix/: kernel.cpp
srcDouble/Networks/: Network.cpp
srcDouble/UI/: driver.cpp
srcDouble/include/: Network.hpp  matLib.hpp  networkTrain.hpp
srcDouble/scratch/test/: a.out
tests/: CMakeLists.txt  Matrix.cpp
